# zo-market-maker-ts

./: .dockerignore  BENCHMARK_RESULTS.md  bench_parse.ts  overview.md  package-lock.json  package.json
rust/: CLAUDE.md  Cargo.toml
rust/nord/: Cargo.toml  STATUS.md  build.rs
rust/nord/proto/: nord.proto
rust/nord/src/: account.rs  admin.rs  client.rs  config.rs  error.rs  lib.rs  orderbook.rs  proto.rs  solana.rs  user.rs  utils.rs
rust/nord/src/actions/: atomic.rs  mod.rs  session.rs  signing.rs
rust/nord/src/rest/: endpoints.rs  mod.rs
rust/nord/src/types/: account.rs  action.rs  admin.rs  deposit.rs  enums.rs  fee.rs  funding.rs  liquidation.rs  market.rs  mod.rs  orderbook.rs  page.rs  pnl.rs  quote_size.rs  stats.rs  trade.rs  trigger.rs  user.rs  volume.rs  withdrawal.rs
rust/nord/src/ws/: events.rs  mod.rs  subscriber.rs
rust/nord/tests/: serde_test.rs  signing_test.rs
rust/src/: cli.rs  feed.rs  main.rs  output.rs  types.rs
rust/zo/: Cargo.toml
rust/zo/src/: cli.rs  client.rs  error.rs  fair_price.rs  feed.rs  main.rs  monitor.rs  orders.rs  output.rs  types.rs
rust/zo/src/mm/: bot.rs  config.rs  mod.rs  position.rs  quoter.rs
src/cli/: prices.ts
