[package]
name = "zo"
version = "0.1.0"
edition = "2021"
default-run = "zo"

[[bin]]
name = "zo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
tokio-util = "0.7"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
ryu = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
